--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       .message2 { font-size: 0.7em; font-style: italic; }
       .red { color: #ff0000; }
       .green{ color: #00FF7F; }
+      .border-red {border-color: red}
+      .border-green {border-color: green}
     </style>
   </head>
 <body ng-app="LunchCheck">
@@ -24,7 +26,7 @@
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control"
              ng-model="food"
-             ng-class="msgColor"
+             ng-class="borderColor"
              >
          </div>
          <div class="message2">* NOT consider and empty item, i.e., `, ,` as an item towards to the count.</div>
